@@ -1,3 +1,4 @@
+* Add server-side icons
 * Add support for file link to BinaryField
 * Add model field access
 * Add loading attribute on fields
